windows/x86_64/dotlottie-player/include/dotlottie_player.h

/* Type aliases for cleaner C code */
typedef struct dotlottiePlayer DotLottiePlayer;
typedef enum dotlottieDotLottieResult {
  Success = 0,
  Error = 1,
  InvalidParameter = 2,
  ManifestNotAvailable = 3,
  AnimationNotLoaded = 4,
  InsufficientCondition = 5,
  FeatureNotEnabled = 6,
} dotlottieDotLottieResult;
typedef enum dotlottieMode {
  Forward,
  Reverse,
  Bounce,
  ReverseBounce,
} dotlottieMode;
typedef enum dotlottieFit {
  Contain,
  Fill,
  Cover,
  FitWidth,
  FitHeight,
  None,
} dotlottieFit;
typedef enum dotlottiePlaybackStatus {
  Playing = 0,
  Paused = 1,
  Stopped = 2,
} dotlottiePlaybackStatus;
typedef enum dotlottieColorSpace {
  ABGR8888,
  ABGR8888S,
  ARGB8888,
  ARGB8888S,
} dotlottieColorSpace;
typedef enum dotlottieDotLottiePlayerEventType {
  Load = 0,
  LoadError = 1,
  Play = 2,
  Pause = 3,
  Stop = 4,
  Frame = 5,
  Render = 6,
  Loop = 7,
  Complete = 8,
} dotlottieDotLottiePlayerEventType;
typedef enum dotlottieStateMachineEventType {
  StateMachineStart = 0,
  StateMachineStop = 1,
  StateMachineTransition = 2,
  StateMachineStateEntered = 3,
  StateMachineStateExit = 4,
  StateMachineCustomEvent = 5,
  StateMachineError = 6,
  StateMachineStringInputChange = 7,
  StateMachineNumericInputChange = 8,
  StateMachineBooleanInputChange = 9,
  StateMachineInputFired = 10,
} dotlottieStateMachineEventType;
/**
 * Opaque C-facing wrapper for StateMachineEngine.
 * Always present; inner is only populated with state-machines feature.
 * Load functions return null_mut() when state-machines is off, so C callers
 * will never hold a valid (non-null) pointer when the feature is disabled.
 */
typedef struct dotlottieDotLottieStateMachine dotlottieDotLottieStateMachine;
typedef struct dotlottiePlayer dotlottiePlayer;
typedef struct dotlottieLayout {
  enum dotlottieFit fit;
  float align[2];
} dotlottieLayout;
typedef struct dotlottieDotLottiePlayerEvent {
  enum dotlottieDotLottiePlayerEventType event_type;
  union dotlottieDotLottiePlayerEventData data;
} dotlottieDotLottiePlayerEvent;
/**
 * State machine event with type tag and data union.
 * String pointers are valid until the next poll call.
 */
typedef struct dotlottieStateMachineEvent {
  enum dotlottieStateMachineEventType event_type;
  union dotlottieStateMachineEventData data;
} dotlottieStateMachineEvent;
struct dotlottiePlayer *dotlottie_new_player(uint32_t threads);
enum dotlottieDotLottieResult dotlottie_destroy(struct dotlottiePlayer *ptr);
enum dotlottieDotLottieResult dotlottie_load_animation_data(struct dotlottiePlayer *ptr,
                                                            const char *animation_data);
enum dotlottieDotLottieResult dotlottie_load_dotlottie_data(struct dotlottiePlayer *ptr,
                                                            const char *file_data,
                                                            uintptr_t file_size);
enum dotlottieDotLottieResult dotlottie_set_mode(struct dotlottiePlayer *ptr,
                                                 enum dotlottieMode mode);
enum dotlottieDotLottieResult dotlottie_set_speed(struct dotlottiePlayer *ptr, float speed);
enum dotlottieDotLottieResult dotlottie_set_loop(struct dotlottiePlayer *ptr, bool loop_animation);
enum dotlottieDotLottieResult dotlottie_set_loop_count(struct dotlottiePlayer *ptr,
                                                       uint32_t loop_count);
enum dotlottieDotLottieResult dotlottie_set_autoplay(struct dotlottiePlayer *ptr, bool autoplay);
enum dotlottieDotLottieResult dotlottie_set_use_frame_interpolation(struct dotlottiePlayer *ptr,
                                                                    bool enabled);
/**
 * Sets the playback segment for the animation.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `segment`: Pointer to an array of 2 floats [start_frame, end_frame], or NULL to clear
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::InvalidParameter` if the player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_set_segment(struct dotlottiePlayer *ptr,
                                                    const float (*segment)[2]);
/**
 * Sets the active marker for the animation.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `marker`: Pointer to a null-terminated C string with the marker name, or NULL to clear
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::InvalidParameter` if the player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_set_marker(struct dotlottiePlayer *ptr, const char *marker);
/**
 * Sets the layout configuration for the animation.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `layout`: Layout configuration (fit mode and alignment)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::InvalidParameter` if the player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_set_layout(struct dotlottiePlayer *ptr,
                                                   struct dotlottieLayout layout);
/**
 * Returns the current segment.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `result`: Pointer to a [f32; 2] array to store [start_frame, end_frame]
 *
 * # Returns
 * - `DotLottieResult::Success` if segment exists and was copied
 * - `DotLottieResult::InvalidParameter` if pointers are invalid or no segment is set
 */
enum dotlottieDotLottieResult dotlottie_get_segment(struct dotlottiePlayer *ptr,
                                                    float (*result)[2]);
/**
 * Returns the current marker name.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `buffer`: Buffer to store the marker name, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Usage
 * ```c
 * size_t size;
 * dotlottie_get_active_marker(player, NULL, &size);  // get required size
 * char* buf = malloc(size);
 * dotlottie_get_active_marker(player, buf, NULL);    // get string
 * ```
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::InvalidParameter` if no marker is set or player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_get_active_marker(struct dotlottiePlayer *ptr,
                                                          char *buffer,
                                                          uintptr_t *size_out);
enum dotlottieDotLottieResult dotlottie_get_total_frames(struct dotlottiePlayer *ptr,
                                                         float *result);
enum dotlottieDotLottieResult dotlottie_get_duration(struct dotlottiePlayer *ptr, float *result);
enum dotlottieDotLottieResult dotlottie_get_current_frame(struct dotlottiePlayer *ptr,
                                                          float *result);
enum dotlottieDotLottieResult dotlottie_get_current_loop_count(struct dotlottiePlayer *ptr,
                                                               uint32_t *result);
/**
 * Returns whether an animation is loaded.
 */
bool dotlottie_is_loaded(struct dotlottiePlayer *ptr);
/**
 * Returns the current playback status.
 *
 * Priority order: Playing > Paused > Stopped
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 *
 * # Returns
 * The current PlaybackStatus (Playing, Paused, or Stopped)
 * Returns Stopped if the pointer is invalid
 */
enum dotlottiePlaybackStatus dotlottie_get_playback_status(struct dotlottiePlayer *ptr);
enum dotlottieDotLottieResult dotlottie_play(struct dotlottiePlayer *ptr);
enum dotlottieDotLottieResult dotlottie_pause(struct dotlottiePlayer *ptr);
enum dotlottieDotLottieResult dotlottie_stop(struct dotlottiePlayer *ptr);
enum dotlottieDotLottieResult dotlottie_set_frame(struct dotlottiePlayer *ptr, float no);
enum dotlottieDotLottieResult dotlottie_render(struct dotlottiePlayer *ptr);
/**
 * Advance the animation by `dt` seconds and render if the frame changed.
 *
 * If `rendered` is non-null, writes `true` when a new frame was rendered
 * and `false` when the frame was unchanged.
 *
 * Example of the usage
 * ```c
 *     double last = get_time_ms();
 *     bool rendered;
 *     while(true) {
 *       double now = get_time_ms();
 *       float dt = (float)(now - last);
 *       last = now;
 *       dotlottie_tick(player, dt, &rendered);
 *       if (rendered) display(buffer, width, height);
 *     }
 * ```
 */
enum dotlottieDotLottieResult dotlottie_tick(struct dotlottiePlayer *ptr, float dt, bool *rendered);
/**
 * Sets the software rendering target.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `buffer`: Pointer to the pixel buffer (must be width * height in size)
 * - `width`: Width of the buffer in pixels
 * - `height`: Height of the buffer in pixels
 * - `color_space`: Color space for the buffer
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::InvalidParameter` if buffer is too small or pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_set_sw_target(struct dotlottiePlayer *ptr,
                                                      uint32_t *buffer,
                                                      uint32_t width,
                                                      uint32_t height,
                                                      enum dotlottieColorSpace color_space);
enum dotlottieDotLottieResult dotlottie_set_theme(struct dotlottiePlayer *ptr,
                                                  const char *theme_id);
enum dotlottieDotLottieResult dotlottie_reset_theme(struct dotlottiePlayer *ptr);
/**
 * Sets the theme using raw theme data.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `theme_data`: Null-terminated C string containing the theme JSON data
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::FeatureNotEnabled` if built without the `theming` feature
 * - `DotLottieResult::InvalidParameter` if the data is invalid or pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_set_theme_data(struct dotlottiePlayer *ptr,
                                                       const char *theme_data);
/**
 * Gets the number of markers in the current animation.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `count`: Pointer to receive the marker count
 *
 * # Returns
 * - `DOTLOTTIE_SUCCESS` on success
 * - `DOTLOTTIE_INVALID_PARAMETER` if pointers are null
 */
enum dotlottieDotLottieResult dotlottie_get_markers_count(struct dotlottiePlayer *ptr,
                                                          uint32_t *count);
/**
 * Returns the active theme ID.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `buffer`: Buffer to store the ID, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::FeatureNotEnabled` if built without the `theming` feature
 * - `DotLottieResult::InvalidParameter` if no theme is active or player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_get_theme_id(struct dotlottiePlayer *ptr,
                                                     char *buffer,
                                                     uintptr_t *size_out);
enum dotlottieDotLottieResult dotlottie_set_viewport(struct dotlottiePlayer *ptr,
                                                     int32_t x,
                                                     int32_t y,
                                                     int32_t w,
                                                     int32_t h);
/**
 * Poll for the next player event from the event queue
 *
 * Returns 1 if an event was retrieved, 0 if no events are available, or -1 on error.
 * The event data is written to the event pointer.
 *
 * # Example
 * ```c
 * DotLottiePlayerEvent event;
 * while (dotlottie_poll_event(player, &event) == 1) {
 *     switch (event.event_type) {
 *         case DotLottiePlayerEventType_Load:
 *             printf("Animation loaded\n");
 *             break;
 *         case DotLottiePlayerEventType_Frame:
 *             printf("Frame: %f\n", event.data.frame_no);
 *             break;
 *     }
 * }
 * ```
 */
int32_t dotlottie_poll_event(struct dotlottiePlayer *player,
                             struct dotlottieDotLottiePlayerEvent *event);
/**
 * Get interaction types for framework setup
 *
 * Returns bit flags indicating which interaction types are needed.
 * Frameworks should register listeners for the returned interaction types.
 */
enum dotlottieDotLottieResult dotlottie_state_machine_get_framework_setup(struct dotlottieDotLottieStateMachine *sm,
                                                                          uint16_t *result);
/**
 * Poll for the next state machine event
 *
 * Returns 1 if an event was retrieved, 0 if no events are available, or -1 on error.
 * String pointers in the event struct are valid until the next poll call.
 *
 * # Example
 * ```c
 * StateMachineEvent event;
 * while (dotlottie_state_machine_poll_event(sm, &event) == 1) {
 *     switch (event.event_type) {
 *         case StateMachineEventType_StateMachineTransition:
 *             // Pointers valid until next poll
 *             printf("Transition: %s -> %s\n",
 *                    event.data.transition.previous_state,
 *                    event.data.transition.new_state);
 *             break;
 *         case StateMachineEventType_StateMachineStateEntered:
 *             printf("Entered: %s\n", event.data.state.state);
 *             break;
 *     }
 * }
 * ```
 */
int32_t dotlottie_state_machine_poll_event(struct dotlottieDotLottieStateMachine *sm,
                                           struct dotlottieStateMachineEvent *event);